test/bad/bad_block3.m_
begin
    input x;
    input y
    input z;
end
